# DjangoProjectHW

./: .env  Dockerfile  Makefile  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  compose.yaml  data.json  db.sqlite3  pyproject.toml
apps/api/: models.py
apps/celery_screening/: admin.py  apps.py  models.py
apps/celery_screening/celery_beat_schedule/: schedule.py
apps/celery_screening/migrations/: 0001_initial.py  0002_alter_allcandlesusdt_symbol.py  0003_rename_all_candles_1m_in_1hr_allcandlesusdt_all_candles_5m_in_24hr.py
apps/celery_screening/tasks/: __init__.py  tasks.py
apps/cryptocurrency_wi/: admin.py  apps.py  models.py  urls.py  views.py
apps/cryptocurrency_wi/migrations/: 0001_initial.py
apps/static/cripto/: 401.html
apps/templates/binance_html/: 404.html  base2.html  coin_info.html  coins.html
core/: celery.py  settings.py  urls.py
cryptocurrency_wi/: apps.py  urls.py  views.py
cryptocurrency_wi/templates/binance_html/: base.html  base2.html
docker/app/: celery_beat_start.sh  celery_worker_start.sh  init.sh  start.sh
